--- a/css/index.css
+++ b/css/index.css
@@ -236,16 +236,13 @@ figure:hover > figcaption {
   margin: 0 0 3% 0;
 }
 
-.contact-me img:hover, 
+.contact-me img:hover,
 .contact-me img:focus {
-
   transform: translatex(60px);
-  
-  
-  
 }
 
-.contact-me h1, .contact-me-a h1 {
+.contact-me h1,
+.contact-me-a h1 {
   font-size: 2.5rem;
   margin: 0 0 0 0;
 }
@@ -258,7 +255,7 @@ figure:hover > figcaption {
 
 .contact-me-a a {
   font-size: 1.5rem;
- padding: 15px;
+  padding: 15px;
 }
 
 /* -----> Media Queries <----- */
@@ -445,7 +442,8 @@ figure:hover > figcaption {
     justify-content: center;
   }
 
-  .contact-me h1, .contact-me-a h1  {
+  .contact-me h1,
+  .contact-me-a h1 {
     font-size: 2rem;
     padding: 1em 0 0.5em 0;
   }
@@ -456,8 +454,6 @@ figure:hover > figcaption {
     justify-content: center;
     align-items: center;
   }
-
-  
 }
 
 @media (max-width: 425px) {
@@ -529,13 +525,13 @@ figure:hover > figcaption {
     width: 90%;
   }
 
-  .contact-me h1, .contact-me-a h1  {
+  .contact-me h1,
+  .contact-me-a h1 {
     font-size: 1.3rem;
     padding: 1em 0 0.8em 0;
   }
 
-  .contact-me-a a  {
+  .contact-me-a a {
     font-size: 1.1rem;
-
-}
+  }
 }
