--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,284 @@
 /* pilates vectors
 https://photostockeditor.com/clip-art-vector/reformer-pilates */
 
+
+/* ------> Header  -----*/
+
+header {
+  background-color: black;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  position: -webkit-sticky; /* for Safari */
+  position: sticky;
+  z-index: 2;
+  top: 0;
+  align-self: flex-start;
+}
+
+a, button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0); /*to remove box of image container to show on tap on mobile*/
+}
+
+#button {
+  background: linear-gradient(
+    320deg,
+    rgba(247, 116, 166, 1) 14%,
+    rgba(248, 150, 178, 1) 29%,
+    rgba(250, 246, 211, 1) 52%,
+    rgba(125, 199, 223, 1) 76%,
+    rgba(74, 179, 228, 1) 100%
+  );
+  border-radius: 50%;
+  border-style: solid;
+  height: 65px;
+  width: 65px;
+  margin: auto;
+  cursor: pointer;
+
+}
+
+#button:hover {
+  transform: rotate(60deg);
+  box-shadow: 1px 1px 20px whitesmoke;
+}
+
+#button:active {
+  transform: translateY(10px) rotate(120deg) skewY(4deg);
+  -webkit-tap-highlight-color: transparent;
+  
+}
+
+
+
+.ball {
+  animation-name: ball;
+  animation-duration: 3s;
+  animation-timing-function: ease-in;
+  animation-delay: 1s;
+}
+
+@keyframes ball {
+  0% {
+    background: linear-gradient(
+      320deg,
+      rgba(247, 116, 166, 1) 14%,
+      rgba(248, 150, 178, 1) 29%,
+      rgba(250, 246, 211, 1) 52%,
+      rgba(125, 199, 223, 1) 76%,
+      rgba(74, 179, 228, 1) 100%,
+    );
+    margin: auto;
+    transform: rotateZ(600deg);
+  }
+
+  30% {
+    background: linear-gradient(
+      320deg,
+      rgba(247, 116, 166, 1) 34%,
+      rgba(248, 150, 178, 1) 29%,
+      rgba(250, 246, 211, 1) 12%,
+    );
+    margin: 0, 5vh 0 20px 0;
+    transform: rotate(20deg);
+  }
+
+  40% {
+    background: rgba(247, 116, 166, 1);
+    margin: 0, 5vh 0 20px 0;
+  }
+  45% {
+    background: rgba(248, 150, 178, 1);
+    margin: 20px 0px 20px 0;
+  }
+  50% {
+    background: linear-gradient(
+      320deg,
+      rgba(248, 150, 178, 1) 25%,
+      rgba(247, 116, 166, 1) 25%,
+      rgba(250, 246, 211, 1) 25%,
+    );
+    transform: rotate(90deg);
+    margin: 0px 0px 0px 0;
+  }
+  60% {
+    background: rgba(250, 246, 211, 1);
+    margin: -10px 0px 0px 0;
+  }
+  70% {
+    background: rgba(125, 199, 223, 1);
+    margin: -20px 0 0px 0px;
+  }
+  75% {
+    background: rgba(74, 179, 228, 1);
+    margin: 20px 0 0px 0px;
+  }
+  80% {
+    background: linear-gradient(
+      320deg,
+      rgba(250, 246, 211, 1) 52%,
+      rgba(125, 199, 223, 1) 16%,
+    );
+    margin: auto;
+    transform: rotate(-300deg);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+/*.......Header : Navigation Menu.......*/
+
+.nav-bar li {
+  display: inline-block;
+  margin: 1.5rem 0 0 0;
+}
+
+.nav-bar li a {
+  color: rgba(250, 246, 211, 1);
+  font-size: 22px;
+  list-style: none;
+  text-decoration: none;
+  padding: 0.2rem;
+}
+
+.nav-bar li a:hover {
+  text-decoration: underline;
+  text-shadow: 2px 2px 20px whitesmoke;
+}
+
+.nav-bar li a:active {
+  text-decoration: underline;
+  text-shadow: 4px 4px 30px whitesmoke;
+}
+
+.social {
+  margin: 1.5rem 1.5rem 0 0;
+}
+
+.social img:hover {
+  box-shadow: 1px 1px 14px whitesmoke;
+}
+
+.social img:active {
+  box-shadow: 1px 1px 25px whitesmoke;
+}
+
+.social img {
+  height: 40px;
+  width: 40px;
+  position: 0;
+  margin: 5px;
+  background-color: rgba(250, 246, 211, 1);
+  border-radius: 10%;
+  padding: 0.1rem;
+}
+
+
+
+
+/* ---> Media Queries <--- */
+
+@media (max-width: 1200px) {
+  .nav-bar li a {
+   
+    font-size: 24px;
+    padding: 0 4px 0 0  ;
+  }
+}
+
+
+@media (max-width: 600px) {
+  
+  .ball {
+    animation-name: ball;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-delay: 1s;
+  }
+  
+  @keyframes ball {
+    0% {
+      background: linear-gradient(
+        320deg,
+        rgba(247, 116, 166, 1) 14%,
+        rgba(248, 150, 178, 1) 29%,
+        rgba(250, 246, 211, 1) 52%,
+        rgba(125, 199, 223, 1) 76%,
+        rgba(74, 179, 228, 1) 100%,
+      );
+      margin: auto;
+      
+    }
+
+       
+    
+    70% {
+      background: linear-gradient(
+        320deg,
+        rgba(247, 116, 166, 1) 14%,
+        rgba(248, 150, 178, 1) 29%,
+        rgba(250, 246, 211, 1) 52%,
+        rgba(125, 199, 223, 1) 76%,
+        rgba(74, 179, 228, 1) 100%,
+      );
+      margin: auto;
+      transform: rotateZ(600deg);
+
+    }
+  }
+ 
+
+.social {
+  margin: 1.7rem 1.5rem 0 0;
+}
+
+
+  .social img {
+    height: 30px;
+    width: 30px;
+  }
+
+  ul {
+    padding: 0 0 0 1.6rem;
+  }
+  .nav-bar li a {
+   
+    font-size: 16px;
+    padding: 0 4px 0 0  ;
+  }
+  
+}
+
+
+@media (max-width: 425px) {
+
+  #button {
+    height: 45px;
+    width: 45px;
+  }
+
+  .social {
+    margin: 1.7rem 0.5rem 0 0;
+  }
+
+  ul {
+    padding: 0 0 0 0.6rem;
+  }
+
+
+}
+
+
+
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -257,6 +535,65 @@ figure:hover > figcaption {
   font-size: 1.5rem;
   padding: 15px;
 }
+
+
+
+/* ----> Footer <----- */
+
+footer {
+  background-color: black;
+  color: rgb(255, 235, 205);
+  line-height: 0;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#footer-a-toTop {
+  margin: 0;
+  background-color: rgb(255, 235, 205);
+  border-radius: 10%;
+  height: 40px;
+  width: 40px;
+  padding: 0.1rem;
+}
+
+#footer-a-toTop:hover {
+  box-shadow: 1px 1px 14px whitesmoke;
+}
+
+#footer-a-toTop:active {
+  box-shadow: 1px 1px 25px whitesmoke;
+}
+
+#footer-a {
+  color: rgb(255, 235, 205);
+  text-decoration: none;
+}
+
+#footer-a:hover {
+  border-bottom-width: 3.1px;
+  text-decoration: underline;
+  text-shadow: 2px 2px 20px whitesmoke;
+}
+
+#footer-a:active {
+  text-decoration: underline;
+  text-shadow: 4px 4px 10px whitesmoke;
+}
+
+.to-top {
+  align-self: center;
+}
+.attributions {
+  line-height: 0.5em;
+}
+
+
+
+
+
 
 /* -----> Media Queries <----- */
 
