--- a/css/index.css
+++ b/css/index.css
@@ -543,21 +543,41 @@ figure:hover > figcaption {
 footer {
   background-color: black;
   color: rgb(255, 235, 205);
-  line-height: 0;
   padding: 1%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
-#footer-a-toTop {
+footer h6 {
+  font-size: 1rem;
   margin: 0;
+  padding: 0;
+}
+
+footer p {
+  font-size: 1rem;
+  font-stretch: semi-expanded;
+  margin: 0;
+  padding: 0;
+}
+
+.attributions {
+  line-height: 1.5em;
+ 
+  
+}
+
+#footer-a-toTop {
+  margin: 2% 0;
   background-color: rgb(255, 235, 205);
   border-radius: 10%;
   height: 40px;
   width: 40px;
   padding: 0.1rem;
   align-self: center;
+  line-height: 0;
+
 }
 
 #footer-a-toTop:hover {
@@ -568,26 +588,26 @@ footer {
   box-shadow: 1px 1px 25px whitesmoke;
 }
 
-#footer-a {
+
+#footer-a, #footer-icons-a {
   color: rgb(255, 235, 205);
   text-decoration: none;
 }
 
-#footer-a:hover {
+
+#footer-a:hover, #footer-icons-a:hover {
   border-bottom-width: 3.1px;
   text-decoration: underline;
   text-shadow: 2px 2px 20px whitesmoke;
 }
 
-#footer-a:active {
+#footer-a:active, #footer-icons-a:active {
   text-decoration: underline;
   text-shadow: 4px 4px 10px whitesmoke;
 }
 
 
-.attributions {
-  line-height: 0.5em;
-}
+
 
 
 
@@ -715,6 +735,14 @@ footer {
   .my-video-item {
     width: 80%;
   }
+
+  footer p {
+    font-size: 0.9rem;
+  }
+
+  #footer-a-toTop {
+    margin: 2.5%;
+}
 }
 
 @media (max-width: 600px) {
@@ -790,6 +818,18 @@ footer {
     justify-content: center;
     align-items: center;
   }
+
+footer p {
+  font-size: 0.8rem;
+}
+
+  #footer-a-toTop {
+    width: 30px;
+    height: 30px;
+    margin: 3.5% 0;
+}
+
+
 }
 
 @media (max-width: 425px) {
@@ -870,4 +910,17 @@ footer {
   .contact-me-a a {
     font-size: 1.1rem;
   }
+
+  footer p {
+    font-size: 0.7rem;
+  }
+
+  #footer-a-toTop {
+    margin: 8% 0;
+  }
+  
+  .attributions {
+    line-height: 1.3em;
+
+  
 }
