deleted: footer.css and header.css + changed font size footer p to 0.8rem @425

--- a/css/index.css
+++ b/css/index.css
@@ -912,7 +912,7 @@ footer p {
   }
 
   footer p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
 
   #footer-a-toTop {
@@ -921,6 +921,6 @@ footer p {
   
   .attributions {
     line-height: 1.3em;
+}
 
-  
 }
