--- a/css/index.css
+++ b/css/index.css
@@ -348,8 +348,8 @@ a:hover {
 }
 
 .about-me-side p {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
+    font-weight: 500;
 }
 
 .about-me-text {
