--- a/css/index.css
+++ b/css/index.css
@@ -758,6 +758,11 @@ footer p {
     width: 90%;
   }
 
+  .about-me-side p {
+    font-family: 'Raleway', sans-serif;
+      font-weight: 600;
+  }
+
   .pilates-system {
     flex-direction: column;
     align-items: stretch;
