--- a/css/index.css
+++ b/css/index.css
@@ -760,6 +760,7 @@ footer p {
 
   .about-me-side P {
     font-family: 'Raleway', 'Trebuchet MS',  sans-serif;
+    font-weight: 600;
   }
 
   .pilates-system {
