--- a/css/index.css
+++ b/css/index.css
@@ -759,8 +759,8 @@ footer p {
   }
 
   .about-me-side P {
-    font-family: 'Raleway', 'Trebuchet MS',  sans-serif;
-    font-weight: 600;
+    font-family: 'Trebuchet MS','Raleway',   sans-serif;
+    /* font-weight: 600; */
   }
 
   .pilates-system {
