refactoring code and format on save

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-/* pilates vectors
-https://photostockeditor.com/clip-art-vector/reformer-pilates */
 
 
 /* ------> Header  -----*/
@@ -130,9 +128,6 @@ a, button {
 
 
 
-
-
-
 /*.......Header : Navigation Menu.......*/
 
 .nav-bar li {
@@ -183,7 +178,7 @@ a, button {
 
 
 
-/* ---> Media Queries <--- */
+/* ---> Header: Media Queries <--- */
 
 @media (max-width: 1200px) {
   .nav-bar li a {
@@ -279,8 +274,15 @@ a, button {
 
 
 
+
+
+
+/*----- Main Section ------*/
+
+
 html {
   scroll-behavior: smooth;
+ 
 }
 
 body {
@@ -289,6 +291,7 @@ body {
   overscroll-behavior: none; /*to keep body from bouncing left/right on safari*/
   font-family: "Handlee", "Indie Flower", "Trebuchet MS", "Lucida Sans Unicode",
     "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 ::selection {
@@ -314,7 +317,12 @@ a:hover {
   border-bottom-width: 3.1px;
 }
 
+
+
+
+
 /*----- Main Section: My Photo and About Me text ------*/
+
 
 .about-me {
   width: 95%;
@@ -357,7 +365,12 @@ a:hover {
   text-align: left;
 }
 
+
+
+
+
 /*----- Main Section: Pilates system: 4 types / images ------*/
+
 
 h2 {
   margin: 10% 0 0 2%;
@@ -368,6 +381,7 @@ h2 {
   display: flex;
   justify-content: space-around;
   margin: 4em 0 17em 0;
+ 
 }
 
 .pilates-system > figure {
@@ -376,6 +390,7 @@ h2 {
   align-items: center;
   margin: 10px;
   width: 20%;
+ 
 }
 
 .pilates-system > figure:active {
@@ -457,7 +472,12 @@ figure:hover > figcaption {
   visibility: visible;
 }
 
+
+
+
+
 /*----- Main Section: My Videos ------*/
+
 
 .my-videos {
   color: rgba(250, 246, 211, 1);
@@ -499,7 +519,12 @@ figure:hover > figcaption {
   text-align: center;
 }
 
+
+
+
+
 /* ---> Section: Contact Me <--- */
+
 
 .contact-me {
   display: flex;
@@ -538,7 +563,12 @@ figure:hover > figcaption {
 
 
 
+
+
+
+
 /* ----> Footer <----- */
+
 
 footer {
   background-color: black;
@@ -613,8 +643,9 @@ footer p {
 
 
 
-
 /* -----> Media Queries <----- */
+
+
 
 @media (max-width: 1200px) {
   h2 {
