--- a/css/index.css
+++ b/css/index.css
@@ -51,9 +51,11 @@ a, button {
 
 .ball {
   animation-name: ball;
-  animation-duration: 4s;
-  animation-timing-function: ease-in-out;
+  animation-duration: 50s;
+  animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   animation-delay: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
  
  
  
@@ -76,9 +78,10 @@ a, button {
   30% {
     background: linear-gradient(
       320deg,
-      rgba(247, 116, 166, 1) 34%,
-      rgba(248, 150, 178, 1) 29%,
-      rgba(250, 246, 211, 1) 12%,
+      rgba(247, 116, 166, 1) 14%,
+      rgba(248, 150, 178, 1) 49%,
+      rgba(250, 246, 211, 1) 22%,
+      rgba(125, 199, 223, 1) 26%,
     );
     margin: 0, 5vh 0 20px 0;
     transform: rotate(20deg);
@@ -87,11 +90,16 @@ a, button {
   40% {
     background: rgba(247, 116, 166, 1);
     margin: 0, 5vh 0 20px 0;
+    transform: rotate(40deg);
   }
+
   45% {
     background: rgba(248, 150, 178, 1);
+    transform: rotate(-10deg);
+
     /* margin: 20px 0px 20px 0; */
   }
+
   50% {
     background: linear-gradient(
       320deg,
@@ -107,18 +115,27 @@ a, button {
     /* margin: -10px 0px 0px 0; */
   }
   70% {
-    background: rgba(125, 199, 223, 1);
+    background: linear-gradient(
+    320deg,
+    rgba(250, 246, 211, 1) 52%,
+    rgba(125, 199, 223, 1) 16%,
+  );
+   
     /* margin: -20px 0 0px 0px; */
   }
   75% {
-    background: rgba(74, 179, 228, 1);
+    background:  rgba(74, 179, 228, 1);
+
+  
     /* margin: 20px 0 0px 0px; */
   }
-  80% {
+  85% {
     background: linear-gradient(
       320deg,
-      rgba(250, 246, 211, 1) 52%,
+      rgba(250, 246, 211, 1) 72%,
       rgba(125, 199, 223, 1) 16%,
+      rgba(74, 179, 228, 1) 10%,
+      rgba(248, 150, 178, 1) 26%,
     );
     margin: auto;
     transform: rotate(-300deg);
